# smartcharge-analytics

./: .gitignore  LICENSE  README.md  arima_model.py  database_model.py  eda.ipynb  energy_demand_forecast.ipynb  ev_charging_database.py  ingestion.py  main.py  models.py  preprocessing.py  pyproject.toml  requirements.txt
